# project_01

./: final.txt.txt  intarray.cpp  y  y.pub
Bash/src/cat/: Makefile  option.c  output.c  s21_cat  s21_cat.c  s21_cat.h
Bash/src/grep/: Makefile  found.c  options.c  s21_grep  s21_grep.c  s21_grep.h
BrickGame/: CMakeLists.txt  Makefile
BrickGame/brick_game/: brick_game_ncurses.cpp  brick_game_qt.cpp
BrickGame/brick_game/snake/: snake_controller.cpp  snake_controller.h  snake_define.hpp  snake_model.cpp  snake_model.hpp
BrickGame/brick_game/tetris/: tetris_backend.c  tetris_backend.h  tetris_check.c  tetris_check.h  tetris_controller.c  tetris_controller.h  tetris_defines.h  tetris_matrix.c  tetris_matrix.h  tetris_objects.c  tetris_objects.h
BrickGame/common/: bg_objects.h  controller.cpp  controller.h
BrickGame/gui/cli/: bg_objects.c  defines_of_ncurses.h  interface.c  interface.h
BrickGame/gui/desktop/: View.cpp  View.h  View.ui
CPP1_s21_matrixplus-1/src/: Makefile  s21_calc_complements.cpp  s21_constructor.cpp  s21_destructor.cpp  s21_determinant.cpp  s21_eq_matrix.cpp  s21_inverse_matrix.cpp  s21_matrix_oop.h  s21_minor.cpp  s21_mul_matrix.cpp  s21_mul_number.cpp  s21_mutator.cpp  s21_operator.cpp  s21_private.cpp  s21_sub_matrix.cpp  s21_sum_matrix.cpp  s21_transpose.cpp
CPP1_s21_matrixplus-1/src/tests/: test.cpp
lvl_1/: complete_task_1.1.py.ipynb  complete_task_1.2.ipynb  complete_task_1.3.ру.ipynb  complrtr_task_1.4.ipynb
lvl_2/: complete_task_2.1.ру.ipynb  complete_task_2.2.ipynb  complete_task_2.3.ipynb  complete_task_2.4.ipynb
lvl_4/: complete_task_4.1.sql
matrix/src/: Makefile  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_helpers.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c
python/: complete_task_3.1  complete_task_4.1.py
